新增切版內容

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="header">
-  <h1 class="header__title">Contact</h1>
+  <h1 class="header__title">CONTACTS.</h1>
+  <div class="search-bar">
+    <input class="search-bar__input" type="text" placeholder="Search contact">
+    <button class="search-bar__btn">
+      <img src="assets/images/icon_search.svg">
+    </button>
+  </div>
 </div>
 <ul class="contact-list">
   <app-contact-item *ngFor="let item of contactList;index as i" [contact]="item"></app-contact-item>
