--- a/src/app/contact-item/contact-item.component.scss
+++ b/src/app/contact-item/contact-item.component.scss
@@ -1,12 +1,17 @@
+@import '../../assets/style/variable';
+
 .contact-item {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
   padding: 4% 8%;
-  border-bottom: 1px solid #eee;
+  border-radius: 5px;
+  background-color: $white;
+  box-shadow: 2px 5px 8px 0 rgba(0, 0, 0, 0.1);
 
   &__figure {
-    height: 50px;
     width: 50px;
+    height: 50px;
     margin-right: 20px;
     border-radius: 50%;
     background-color: #ddd;
@@ -18,18 +23,21 @@
   }
 
   &__name {
+    margin-bottom: 6px;
     font-weight: bold;
-    margin-bottom: 5px;
   }
 
   &__phone {
-    color: #888888;
+    color: $american-river;
   }
 
   &__call {
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    border-radius: 50%;
+    background-color: #009efd;
 
     img {
       width: 100%;
