新增搜尋功能

--- a/src/app/contact-item/contact-item.component.html
+++ b/src/app/contact-item/contact-item.component.html
@@ -1,12 +1,12 @@
 <li class="contact-item">
   <div class="contact-item__figure">
-    <img [src]="contactItem.avatar">
+    <img [src]="contact.avatar">
   </div>
   <div class="contact-item__info">
-    <div class="contact-item__name">{{contactItem.name}}</div>
-    <div class="contact-item__phone">{{contactItem.phone}}</div>
+    <div class="contact-item__name">{{contact.name}}</div>
+    <div class="contact-item__phone">{{contact.phone}}</div>
   </div>
-  <a [href]="'tel:'+contactItem.phone" class="contact-item__call">
+  <a [href]="'tel:'+contact.phone" class="contact-item__call">
     <img src="assets/images/icon_phone.svg">
   </a>
 </li>
