--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
   <div class="header">
     <h1 class="header__title">CONTACTS.</h1>
     <div class="search-bar">
-      <input class="search-bar__input" type="text" placeholder="Search contact">
-      <button class="search-bar__btn">
+      <input [(ngModel)]="searchText" (keyup.enter)="search()" (blur)="search(); searchText='' "
+        class="search-bar__input" type="text" placeholder="Search contact">
+      <button type="submit" (click)="search()" class="search-bar__btn">
         <img src="assets/images/icon_search.svg">
       </button>
     </div>
