--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,64 +1,9 @@
-@import '../assets/style/variable';
-
 .wrap {
   height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 125px;
-  padding: 20px 0;
-  background-image: linear-gradient(to right, #00c6fb 0%, #005bea 100%);
-  box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.1);
-
-  &__title {
-    line-height: 48px;
-    font-size: 20px;
-    letter-spacing: 2px;
-    color: $white;
-  }
-}
-
-.search-bar {
-  display: flex;
-  width: 80%;
-  height: 35px;
-
-  &__input {
-    flex-grow: 1;
-    padding: 6px 0 6px 20px;
-    border: 0;
-    border-top-left-radius: 100px;
-    border-bottom-left-radius: 100px;
-    color: $text-color;
-
-    &::placeholder {
-      color: #888;
-    }
-  }
-
-  &__btn {
-    padding: 6px 20px 6px 0;
-    border: 0;
-    border-top-right-radius: 100px;
-    border-bottom-right-radius: 100px;
-    background-color: $white;
-  }
-}
-
-.contact-list {
-  flex: 1;
-  padding: 20px 15px;
-  overflow: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  padding-top: constant(safe-area-inset-top);
+  padding-right: constant(safe-area-inset-right);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-left: constant(safe-area-inset-left);
 }
