--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 @import './assets/style/mixin';
 @import './assets/style/base';
 @include reset();
+
+.device-cordova.device-ios {
+  height: 100vh;
+}
