--- a/src/assets/style/_variable.scss
+++ b/src/assets/style/_variable.scss
@@ -28,5 +28,6 @@ $dracula-orchid: #2d3436;
 $brite-yellow: #fdcb6e;
 $electron-blue: #0984e3;
 
+$main: linear-gradient(to right, #00c6fb 0%, #005bea 100%);
 $text-color: $dracula-orchid;
 $link-color:$electron-blue;
