--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,1 +1,59 @@
-<p>contact-form works!</p>
+<div class="wrap editor">
+  <div class="editor__header">
+    <a (click)="goToIndex($event)" href="#" class="editor__cancel"><i class="gg-math-plus"></i></a>
+    <div class="editor__title">新增聯絡人</div>
+    <button (click)="createContact(contactForm)" class="editor__save">SAVE</button>
+  </div>
+  <div class="editor__content">
+    <div class="editor__avatar">
+      <img src="assets/images/icon_avatar.svg">
+    </div>
+
+    <div class="form-group">
+      <form #contactForm="ngForm">
+        <div ngModelGroup="contact">
+          <div class="form-item">
+            <div class="form-icon"><i class="gg-boy"></i></div>
+            <div class="input-group">
+              <input type="text" placeholder="姓名" required name="name" ngModel>
+              <div class="input-deco"></div>
+              <label class="input-label">姓名</label>
+            </div>
+          </div>
+          <div class="form-item">
+            <div class="form-icon"><i class="gg-phone"></i></div>
+            <div class="input-group">
+              <input type="text" placeholder="手機號碼" required name="mobile" ngModel>
+              <div class="input-deco"></div>
+              <label class="input-label">手機號碼</label>
+            </div>
+          </div>
+          <div class="form-item">
+            <div class="form-icon"><i class="gg-home-alt"></i></div>
+            <div class="input-group">
+              <input type="text" placeholder="住家號碼" name="home" ngModel>
+              <div class="input-deco"></div>
+              <label class="input-label">住家號碼</label>
+            </div>
+          </div>
+          <div class="form-item">
+            <div class="form-icon"><i class="gg-mail"></i></div>
+            <div class="input-group">
+              <input type="email" placeholder="電子信箱" name="email" ngModel>
+              <div class="input-deco"></div>
+              <label class="input-label">Email</label>
+            </div>
+          </div>
+          <div class="form-item">
+            <div class="form-icon"><i class="gg-pin"></i></div>
+            <div class="input-group">
+              <input type="text" placeholder="地址" name="address" ngModel>
+              <div class="input-deco"></div>
+              <label class="input-label">地址</label>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
