--- a/src/app/contact-item/contact-item.component.scss
+++ b/src/app/contact-item/contact-item.component.scss
@@ -1,13 +1,17 @@
 @import '../../assets/style/variable';
 
 .contact-item {
-  display: flex;
-  align-items: center;
   margin-bottom: 20px;
-  padding: 4% 8%;
   border-radius: 5px;
   background-color: $white;
   box-shadow: 2px 5px 8px 0 rgba(0, 0, 0, 0.1);
+
+  &__link {
+    display: flex;
+    align-items: center;
+    padding: 4% 8%;
+    color: $text-color;
+  }
 
   &__figure {
     width: 50px;
