--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -1,14 +1,27 @@
 @import '../../assets/style/variable';
+@import '../../assets/style/icon';
 
 .header {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 160px;
   padding: 20px 0;
-  background-image: linear-gradient(to right, #00c6fb 0%, #005bea 100%);
+  background-image: $main;
   box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.1);
+
+  &__link {
+    position: absolute;
+    top: 25px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+  }
 
   &__title {
     line-height: 48px;
