--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -134,7 +134,7 @@
     /* 2 */
     @include on-event {
       color: $text-color;
-      text-decoration: underline;
+      text-decoration: none;
     }
 
     &[href] {
