--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,13 @@
 .device-cordova.device-ios {
   height: 100vh;
 }
+
+.wrap {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: constant(safe-area-inset-top);
+  padding-right: constant(safe-area-inset-right);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-left: constant(safe-area-inset-left);
+}
