抽出資料到service拿取

--- a/src/app/contact-detail/contact-detail.component.html
+++ b/src/app/contact-detail/contact-detail.component.html
@@ -32,7 +32,7 @@
     </li>
   </ul>
 
-  <a href="/createForm" class="detail__edit">
+  <a (click)="goToEdit($event)" class="detail__edit">
     <img src="assets/images/icon_edit.svg" alt="">
   </a>
 </div>
