--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,8 +3,8 @@
     <a (click)="goToCreateContact($event)" class="header__link"><i class="gg-math-plus"></i></a>
     <h1 class="header__title">CONTACTS.</h1>
     <div class="search-bar">
-      <input [(ngModel)]="searchText" (keyup.enter)="search()" (blur)="search(); searchText='' "
-        class="search-bar__input" type="text" placeholder="Search contact">
+      <input [(ngModel)]="searchText" (keyup.enter)="search()" (blur)="search()" class="search-bar__input" type="text"
+        placeholder="Search contact">
       <button type="submit" (click)="search()" class="search-bar__btn">
         <img src="assets/images/icon_search.svg">
       </button>
