--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,60 +1,57 @@
-<div class="wrap editor">
-  <div class="editor__header">
-    <a (click)="goToIndex($event)" href="#" class="editor__cancel"><i class="gg-math-plus"></i></a>
-    <div class="editor__title">新增聯絡人</div>
-    <button (click)="createContact(contactForm)" class="editor__save">SAVE</button>
+<div class="editor__header">
+  <a (click)="goToIndex($event)" href="#" class="editor__cancel"><i class="gg-math-plus"></i></a>
+  <div class="editor__title">新增聯絡人</div>
+  <button (click)="createContact(contactForm)" class="editor__save">SAVE</button>
+</div>
+<div class="editor__content">
+  <div class="editor__avatar">
+    <img src="assets/images/icon_avatar.svg">
   </div>
-  <div class="editor__content">
-    <div class="editor__avatar">
-      <img src="assets/images/icon_avatar.svg">
-    </div>
 
-    <div class="form-group">
-      <form #contactForm="ngForm">
-        <div ngModelGroup="contact">
-          <div class="form-item">
-            <div class="form-icon"><i class="gg-boy"></i></div>
-            <div class="input-group">
-              <input type="text" placeholder="姓名" required name="name" #name="ngModel" [(ngModel)]="contact.name">
-              <div class="input-deco"></div>
-              <label class="input-label">姓名</label>
-            </div>
-          </div>
-          <div class="form-item">
-            <div class="form-icon"><i class="gg-phone"></i></div>
-            <div class="input-group">
-              <input type="text" placeholder="手機號碼" required name="mobile" #mobile="ngModel"
-                [(ngModel)]="contact.mobile">
-              <div class="input-deco"></div>
-              <label class="input-label">手機號碼</label>
-            </div>
-          </div>
-          <div class="form-item">
-            <div class="form-icon"><i class="gg-home-alt"></i></div>
-            <div class="input-group">
-              <input type="text" placeholder="住家號碼" name="home" #home="ngModel" [(ngModel)]="contact.home">
-              <div class="input-deco"></div>
-              <label class="input-label">住家號碼</label>
-            </div>
-          </div>
-          <div class="form-item">
-            <div class="form-icon"><i class="gg-mail"></i></div>
-            <div class="input-group">
-              <input type="email" placeholder="電子信箱" name="email" #email="ngModel" [(ngModel)]="contact.email">
-              <div class="input-deco"></div>
-              <label class="input-label">Email</label>
-            </div>
-          </div>
-          <div class="form-item">
-            <div class="form-icon"><i class="gg-pin"></i></div>
-            <div class="input-group">
-              <input type="text" placeholder="地址" name="address" #address="ngModel" [(ngModel)]="contact.address">
-              <div class="input-deco"></div>
-              <label class="input-label">地址</label>
-            </div>
+  <div class="form-group">
+    <form #contactForm="ngForm">
+      <div ngModelGroup="contact">
+        <div class="form-item">
+          <div class="form-icon"><i class="gg-boy"></i></div>
+          <div class="input-group">
+            <input type="text" placeholder="姓名" required name="name" #name="ngModel" [(ngModel)]="contact.name">
+            <div class="input-deco"></div>
+            <label class="input-label">姓名</label>
           </div>
         </div>
-      </form>
-    </div>
+        <div class="form-item">
+          <div class="form-icon"><i class="gg-phone"></i></div>
+          <div class="input-group">
+            <input type="text" placeholder="手機號碼" required name="mobile" #mobile="ngModel" [(ngModel)]="contact.mobile">
+            <div class="input-deco"></div>
+            <label class="input-label">手機號碼</label>
+          </div>
+        </div>
+        <div class="form-item">
+          <div class="form-icon"><i class="gg-home-alt"></i></div>
+          <div class="input-group">
+            <input type="text" placeholder="住家號碼" name="home" #home="ngModel" [(ngModel)]="contact.home">
+            <div class="input-deco"></div>
+            <label class="input-label">住家號碼</label>
+          </div>
+        </div>
+        <div class="form-item">
+          <div class="form-icon"><i class="gg-mail"></i></div>
+          <div class="input-group">
+            <input type="email" placeholder="電子信箱" name="email" #email="ngModel" [(ngModel)]="contact.email">
+            <div class="input-deco"></div>
+            <label class="input-label">Email</label>
+          </div>
+        </div>
+        <div class="form-item">
+          <div class="form-icon"><i class="gg-pin"></i></div>
+          <div class="input-group">
+            <input type="text" placeholder="地址" name="address" #address="ngModel" [(ngModel)]="contact.address">
+            <div class="input-deco"></div>
+            <label class="input-label">地址</label>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
