--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="wrap">
+  <ng-container>
+    <router-outlet></router-outlet>
+  </ng-container>
+</div>
