--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,9 @@
-
+.wrap {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: constant(safe-area-inset-top);
+  padding-right: constant(safe-area-inset-right);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-left: constant(safe-area-inset-left);
+}
