--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -9,6 +9,7 @@
     </button>
   </div>
 </div>
+<!-- <p>{{contactList?.length}}</p> -->
 <ul class="contact-list">
   <app-contact-item *ngFor="let item of contactList" [contact]="item"></app-contact-item>
 </ul>
